# calorista

./: .gitignore  .pylintrc  LICENSE  README.md  main.py  prefect_orchestrator.py  project_structure.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: run-hourly.yml  scheduled_tasks.yml
auth_tokens/: tokens.json
calorista/: __main__.py  deploy_calorista.py  flow.py  load_historical_to_redis.py  main.py  requirements.txt  streamlit_app.py
calorista/utils/: api.py  auth.py  constants.py  credential_engine.py  models.py  token_manager.py
food/: historical_food_entries_2025-04-07_to_2025-08-14.json
historical_food_data/: historical_food_entries_2025-04-07_to_2025-05-27.csv  historical_food_entries_2025-04-07_to_2025-05-27.json  historical_food_entries_2025-04-07_to_2025-06-15.json  historical_food_entries_2025-04-07_to_2025-06-18.json  historical_food_entries_2025-04-07_to_2025-06-22.json  historical_food_entries_2025-04-07_to_2025-06-23.json  historical_food_entries_2025-04-07_to_2025-06-24.json  historical_food_entries_2025-04-07_to_2025-06-27.json  historical_food_entries_2025-04-07_to_2025-06-28.json  historical_food_entries_2025-04-07_to_2025-07-06.json  historical_food_entries_2025-04-07_to_2025-07-07.json  historical_food_entries_2025-04-07_to_2025-07-09.json  historical_food_entries_2025-04-07_to_2025-07-10.json  historical_food_entries_2025-04-07_to_2025-07-13.json  historical_food_entries_2025-04-07_to_2025-07-15.json  historical_food_entries_2025-04-07_to_2025-07-21.json  historical_food_entries_2025-04-07_to_2025-07-24.json  historical_food_entries_2025-04-07_to_2025-07-27.json  historical_food_entries_2025-04-07_to_2025-08-03.json  historical_food_entries_2025-04-07_to_2025-08-11.json  historical_food_entries_2025-04-07_to_2025-08-12.json
historical_health_data/: 1_hormones_data.json
utils/: api.py  auth.py  constants.py  exceptions.py  models.py  token_manager.py
