[tool.poetry]
name = "calorista"
version = "0.1.0"
description = "ETL pipeline for authenticated FatSecret users that extracts real-time food log data, transforms raw entries with detailed nutritional metadata."
authors = ["Karyna Zuyeva <kzueva54@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "calorista"}]

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pre-commit = "^4.2.0"
ruff = "^0.12.2"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"