[tool.poetry]
name = "calorista"
version = "0.1.0"
description = "ETL pipeline for authenticated FatSecret users that extracts real-time food log data, transforms raw entries with detailed nutritional metadata."
authors = ["Karyna Zuyeva <kzueva54@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [{include = "calorista"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
flask = "^3.1.0"
requests = "^2.32.0"
streamlit = "*"
redis = "*"
pandas = "*"
python-dotenv = "*"
plotly = ">=5.0.0"
prefect = "^3.4.12"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pre-commit = "^4.2.0"
ruff = "^0.12.2"
black = "^25.1.0"
isort = "^6.0.1"
autopep8 = "^2.3.2"

[tool.poetry.scripts]
# Start main Python script as a module
start-main = "calorista.__main__:main"
# Start Streamlit app using a custom function
start-app = "calorista.__main__:run_app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"